Version 0.1.0~dev

	* Initial release, closes: #4188.
	* Add support for kt-toolbox extract action, closes: #4234.
	* Add support for manzanita rewrap action, closes: #4239.
	* Fix module importation in action sub packages.
	* Do not manage output paths in toolbox2 actions, closes: #4253.
	* Add preexec_fn method to Command class.
	* Change output key from tmp_path to path and add infos setting.
	* Fetch STL files using kt-toolbox output in kttoolbox extract
	  action.